--- a/css/style.css
+++ b/css/style.css
@@ -532,6 +532,12 @@ ol {
   color: rgba(255, 255, 255, 0.6);
 }
 
+.footer-input:focus:valid {
+  outline: 2px solid;
+  outline-offset: -1px;
+  outline-color: #2196f3;
+}
+
 .footer-button {
   border-radius: 4px;
   width: 200px;
@@ -856,10 +862,6 @@ ol {
   margin-bottom: 4px;
 }
 
-.label:focus-within {
-  color: #2196f3;
-}
-
 .icon-post,
 .icon-tel,
 .icon-name {
@@ -869,12 +871,21 @@ ol {
   fill: #212121;
 }
 
-.icon-post:focus,
 .icon-post:hover,
-.icon-tel:focus,
 .icon-tel:hover,
-.icon-name:focus,
 .icon-name:hover {
+  fill: #2196f3;
+}
+
+.main-input:focus + .icon-name {
+  fill: #2196f3;
+}
+
+.main-input:focus + .icon-tel {
+  fill: #2196f3;
+}
+
+.main-input:focus + .icon-post {
   fill: #2196f3;
 }
 
@@ -891,25 +902,54 @@ ol {
   font-size: 12px;
   letter-spacing: 0.01em;
   cursor: pointer;
-  transition: color 250ms linear;
+  transition: border-color 250ms ease-in-out;
 }
 
-.main-input:focus,
+.main-input:focus {
+  outline-color: #2196f3;
+}
+
 .main-input:hover {
   border-color: #2196f3;
 }
 
+.main-input:invalid + .icon-name {
+  fill: #212121;
+}
+
+.main-input:valid + .icon-name {
+  fill: #2196f3;
+}
+
+.main-input:invalid + .icon-tel {
+  fill: #212121;
+}
+
+.main-input:valid + .icon-tel {
+  fill: #2196f3;
+}
+
+.main-input:invalid + .icon-post {
+  fill: #212121;
+}
+
+.main-input:valid + .icon-post {
+  fill: #2196f3;
+}
 .comment {
   width: 100%;
   min-height: 120px;
-
   margin-bottom: 20px;
   resize: none;
   border-radius: 4px;
   border-color: rgba(117, 117, 117, 0.5);
   padding: 12px 16px;
   cursor: pointer;
-  transition: color 250ms ease;
+  transition: border-color 250ms ease-in-out;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  letter-spacing: 0.01em;
 }
 
 .comment::placeholder {
@@ -918,14 +958,12 @@ ol {
   font-size: 12px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size: 12px;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
 }
 
-.comment:focus,
+.comment:focus {
+  outline-color: #2196f3;
+}
+
 .comment:hover {
   border-color: #2196f3;
 }
@@ -998,7 +1036,7 @@ ol {
   border-radius: 4px;
   outline: 2px solid #212121;
   outline-offset: -2px;
-  transition: background-color outline-color 250ms linear;
+  transition: background-color 250ms linear, outline-color 250ms linear;
 }
 
 .checkbox:checked + .icon-galochka {
@@ -1008,4 +1046,7 @@ ol {
 
 .checkbox-container {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
