--- a/css/style.css
+++ b/css/style.css
@@ -802,22 +802,8 @@ ol {
   transition: opacity 250ms, visibility 250ms;
 }
 
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  transition-duration: 250ms;
-  width: 528px;
-  min-height: 581px;
-  padding: 14px;
-  border-radius: 4px;
-  background: #fff;
-  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-}
-
 .close-icon {
+  position: absolute;
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -828,10 +814,22 @@ ol {
   justify-content: center;
   align-items: center;
   margin-left: auto;
-  top: 0;
-  right: 0;
+  top: 8px;
+  right: 8px;
   cursor: pointer;
   transition: fill 250ms linear;
+  padding: 0px;
+  outline: none;
+}
+
+.modal-close-icon {
+  width: 11px;
+  height: 11px;
+}
+
+.modal-icon-link {
+  width: 11px;
+  height: 11px;
 }
 
 .close-icon:focus,
@@ -851,6 +849,21 @@ ol {
 
 /* ---------------------------------------------------MODAL------------------ */
 
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition-duration: 250ms;
+  width: 528px;
+  min-height: 581px;
+  padding: 40px;
+  border-radius: 4px;
+  background: #fff;
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+}
+
 .label {
   position: relative;
   display: block;
@@ -859,7 +872,6 @@ ol {
   font-size: 12px;
   letter-spacing: 0.01em;
   color: #757575;
-  margin-bottom: 4px;
 }
 
 .icon-post,
@@ -867,7 +879,7 @@ ol {
 .icon-name {
   position: absolute;
   left: 15px;
-  top: 27px;
+  top: 31px;
   fill: #212121;
 }
 
@@ -903,12 +915,11 @@ ol {
   letter-spacing: 0.01em;
   cursor: pointer;
   transition: border-color 250ms ease-in-out;
+  margin-top: 4px;
+  outline: none;
 }
 
-.main-input:focus {
-  outline-color: #2196f3;
-}
-
+.main-input:focus,
 .main-input:hover {
   border-color: #2196f3;
 }
@@ -950,6 +961,8 @@ ol {
   font-weight: 400;
   font-size: 12px;
   letter-spacing: 0.01em;
+  margin-top: 4px;
+  outline: none;
 }
 
 .comment::placeholder {
@@ -960,10 +973,7 @@ ol {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.comment:focus {
-  outline-color: #2196f3;
-}
-
+.comment:focus,
 .comment:hover {
   border-color: #2196f3;
 }
@@ -982,10 +992,14 @@ ol {
   text-align: center;
   color: #fff;
   border-color: #188ce8;
-  margin-left: calc(50% - 100px);
   cursor: pointer;
-  margin-bottom: 40px;
 }
+
+/* .modal-btn:focus,
+.modal-btn:hover .icon-galochka {
+  background: #2196f3;
+  outline: #2196f3;
+} */
 
 .modal-text {
   font-family: 'Roboto', sans-serif;
@@ -1019,15 +1033,10 @@ ol {
   letter-spacing: 0.03em;
 }
 
-.checkbox-container {
-  cursor: pointer;
-}
-
 .icon-galochka {
   position: absolute;
-  top: 4px;
-  left: 35px;
-
+  top: 3px;
+  left: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1036,6 +1045,7 @@ ol {
   border-radius: 4px;
   outline: 2px solid #212121;
   outline-offset: -2px;
+
   transition: background-color 250ms linear, outline-color 250ms linear;
 }
 
@@ -1044,9 +1054,32 @@ ol {
   outline-color: #2196f3;
 }
 
+.checkbox:focus + .icon-galochka {
+  background-color: #2196f3;
+  outline-color: #2196f3;
+}
+
+.checkbox:hover + .icon-galochka {
+  background-color: #2196f3;
+  outline-color: #2196f3;
+}
+
 .checkbox-container {
-  position: relative;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  padding: 0px 16px;
+}
+
+.modal-btn-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.checkbox {
+  position: absolute;
 }
