--- a/css/style.css
+++ b/css/style.css
@@ -1027,7 +1027,7 @@ ol {
 }
 
 .checkbox:focus + .icon-galochka {
-  background-color: #2196f3;
+  /* background-color: #2196f3; */
   outline-color: #2196f3;
 }
 
